2010-12-09  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-toggle-break-on-signals): New command.
	* swank.lisp (toggle-break-on-signals): The corresponding Lisp code.

2010-12-02  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp (frame-actual-args): Reimplement to include
	only the values like on other platforms and deal with, optional
	key and rest args.
	(print-frame): Format the frame as a call like in other backends.

2010-11-13  Helmut Eller  <heller@common-lisp.net>

	Improve source locations for compiler messages in Lispworks.

	* swank-lispworks.lisp (map-error-database)
	(signal-error-data-base, make-dspec-progenitor-location): Pass the
	edit-path along.
	(signal-undefined-functions): No edit-path available so just use
	nil.

2010-11-12  Helmut Eller  <heller@common-lisp.net>

	Improve frame-source-location for Lispworks.

	* swank-lispworks.lisp (frame-source-location): Exctract the
	edit-path from the frame and pass it to Emacs.
	(edit-path-to-cmucl-source-path): New function.
	(frame-location): Use it.

	* slime.el (slime-location-offset): Add a :edit-path property.
	(slime-search-edit-path): New function.
	(slime-search-call-site): Fix regexp to match
	zero arg functions.

2010-11-07  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (label-value-line): Remove display-nil-value.
	And the other stuff too.
	(label-value-line*): Idem.

2010-11-07  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp: ASDF free again.  And proud of it!
	(default-fasl-dir, load-swank): Remove asdf stuff.

2010-11-03  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (*architecture-features*): Add :arm for CCL
	ARM port.

2010-11-02  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp (list-callers-internal): Revert to previous
	low level implementation, fixed for LW6.
	(list-callees-internal): Reimplement using low level instead of
	the compiler's xref.

2010-10-23  Stas Boukarev  <stassats@gmail.com>
