@@ -12,7 +12,7 @@
 @set EDITION 3.0-alpha
 @set SLIMEVER 3.0-alpha
 @c @set UPDATED @today{}
-@set UPDATED @code{$Date: 2010-04-05 18:56:13 $}
+@set UPDATED @code{$Date: 2010-12-10 15:05:06 $}
 @set TITLE SLIME User Manual
 @settitle @value{TITLE}, version @value{EDITION}
 
@@ -2958,7 +2958,7 @@ Start profiling.
 
 @cmditem{slime-sprof-stop}
 Stop profiling.
-@cmditem{slime-sprof-browser}
+@cmditem{slime-sprof-report}
 Report results of the profiling.
 @end table
 
